--- a/css/style_4inline.css
+++ b/css/style_4inline.css
@@ -261,8 +261,8 @@ ul {
   
   .breadcrumbs  {
     background-color: #002350;
-    width: 350px;
-    height: 35px;
+    width: 310px;
+    height: 30px;
     margin: 20px 20px 20px 55px;
     border-radius: 15px;
   }
@@ -317,8 +317,9 @@ ul {
 
 
 .position-description {
-  margin-left: 35px;
-  margin-right: 35px;
+ height: 90px;
+ margin-left: 30px;
+ margin-right: 30px;
 }
 
 .text {
@@ -496,6 +497,7 @@ u {
   background-color: #FFFFFF;
   height: 100px;
   width: 800px;
+  margin: 5px;
   
   
 }
@@ -515,8 +517,8 @@ u {
 .btn-publish {
   margin-left: 560px;
   background-color: #FF6666;
-  width: 70px;
-  height: 30px;
+  width: 90px;
+  height: 40px;
   border-radius: 15px;
   color: white;
   
