--- a/css/index.css
+++ b/css/index.css
@@ -81,6 +81,19 @@ rect {
   margin-top: 2rem;
   margin-bottom: 1rem;
 }
+.user,
+.logo,
+.carrito,
+.hamburgesa {
+  transition: transform 0.3s;
+}
+
+.user:hover,
+.logo:hover,
+.carrito:hover,
+.hamburgesa:hover {
+  transform: scale(1.1);
+}
 /*------------------------------------------------------------
               NAV        
                                          */
@@ -139,6 +152,13 @@ rect {
   width: 100%;
   height: 20%;
   margin-top: 0rem;
+}
+.item-menu-hamburgesa:hover {
+  background: rgba(0, 0, 0, 0.34); /* Color de fondo transparente en hover */
+}
+li a {
+  text-decoration: none;
+  color: inherit;
 }
 .nav-list .item-menu-hamburgesa li {
   color: #ecececec;
@@ -230,6 +250,9 @@ ul {
   width: 100%;
   height: 20%;
   margin-top: 0rem;
+}
+.item-menu-user:hover {
+  background: rgba(0, 0, 0, 0.34); /* Color de fondo transparente en hover */
 }
 /*
 -----------------------------------------------------------------------------------------
