cambios cards, y arreglo batman vs superman

--- a/css/index.css
+++ b/css/index.css
@@ -423,9 +423,9 @@ nav p {
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
 }
-
-.biblioteca .card-descripcion .card-tittle {
+.biblioteca .card-descripcion .card-text p {
   font-size: 1rem;
+  width: auto;
 }
 .biblioteca .swiper-button-next {
   right: 26px !important;
@@ -470,7 +470,7 @@ nav p {
 .swiper-slide .card-text p {
   font-size: 1.1rem;
   color: black;
-  width: 60%;
+  width: 70%;
 }
 .card-tittle {
   width: 50%;
@@ -485,10 +485,15 @@ nav p {
   width: 40%;
   color: #0f0;
 }
+.card-text p.pay {
+  display: flex;
+  justify-content: end;
+  justify-items: end;
+}
 .card-text p.pay:nth-child(2) {
   display: flex;
   justify-content: end;
-  width: 40%;
+  width: 30%;
   color: #f33;
 }
 
